--- a/FciData_Pages/index.html
+++ b/FciData_Pages/index.html
@@ -9,8 +9,9 @@
 <script>
 function f_submit()
 {
+document.login_form.action="List_Page.jsp";
 //alert(' hellowssss!!!!');
-document.login_form.action="main_page.jsp";
+//document.login_form.action="main_page.jsp";
 //document.login100-form.submit();
 document.login_form.method="post";
 document.login_form.submit();
