--- a/FciData_Pages/index.html
+++ b/FciData_Pages/index.html
@@ -31,7 +31,7 @@ document.login_form.submit();
 						<br>Username<br>
 					</span>
 					<div class="wrap-input100 validate-input m-b-36" data-validate = "Username is required">
-						<input class="input100" type="text" name="username"  value="ADMIN">
+						<input class="input100" type="text" name="username"  value="guest">
 						<span class="focus-input100"></span>
 					</div>
 					
@@ -42,7 +42,7 @@ document.login_form.submit();
 						<span class="btn-show-pass">
 							<i class="fa fa-eye"></i>
 						</span>
-						<input class="input100" type="password" name="password" value="ADMIN1234" >
+						<input class="input100" type="password" name="password" value="12345" >
 						<span class="focus-input100"></span>
 					</div>
 					
